<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sendTokenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendToken"
    android:orientation="vertical"
    android:background="@color/walletFirstColor">

    <ImageButton
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        app:srcCompat="@drawable/ic_close_black_24dp"
        android:background="@null"
        android:padding="15sp"
        android:onClick="sendTokenOnclick"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:layout_marginTop="24sp"
        android:layout_marginStart="32sp">

        <ImageView
            android:layout_width="64sp"
            android:layout_height="64sp"
            android:background="@drawable/buy_token_circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SendTokenIcon"
            android:textColor="@color/walletFirstColor"
            android:textSize="48sp"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SendTokenTitle"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_marginStart="32sp"
        android:layout_marginTop="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SendTokenScript"
        android:textColor="@color/walletSeventhColor"
        android:textSize="16sp"
        android:layout_marginStart="32sp"
        android:layout_marginTop="10sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96sp"
        android:layout_marginStart="32sp"
        android:layout_marginBottom="5sp">

        <TextView
            android:id="@+id/sendFromTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SendTokenFrom"
            android:textSize="18sp"
            android:textColor="@color/walletEightColor"
            android:layout_centerVertical="true"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/sendTokenFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/sendFromTv"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textColor="@color/walletTencolor"
            android:layout_marginStart="32sp"
            android:layout_marginEnd="15sp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8sp"
        android:layout_marginStart="32sp"
        android:layout_marginTop="10sp"
        android:background="@color/walletEightColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24sp"
        android:layout_marginStart="32sp"
        android:layout_marginBottom="1sp"
        android:weightSum="1">

        <TextView
            android:id="@+id/sendToTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SendTokenTo"
            android:textSize="18sp"
            android:textColor="@color/walletEightColor"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/sendTokenTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48sp"
            android:textColor="@color/walletTencolor"
            android:textSize="18sp"
            android:layout_marginEnd="15sp"
            android:layout_weight="1"
            android:background="@null"/>

        <ImageButton
            android:id="@+id/qrCodeScanBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_qr_code_scan"
            android:background="@null"
            android:padding="5sp"
            android:layout_marginEnd="9sp"
            android:onClick="sendTokenOnclick"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8sp"
        android:layout_marginStart="32sp"
        android:layout_marginTop="10sp"
        android:background="@color/walletEightColor"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:layout_marginStart="32sp"
        android:layout_marginBottom="5sp">

        <TextView
            android:id="@+id/sendAmountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SendTokenAmount"
            android:textSize="18sp"
            android:textColor="@color/walletEightColor"
            android:layout_centerVertical="true"
            android:textAlignment="center"/>

        <ImageButton
            android:id="@+id/sendAmountMinusBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            app:srcCompat="@drawable/ic_minus_token"
            android:layout_toEndOf="@id/sendAmountTv"
            android:padding="3sp"
            android:layout_centerVertical="true"
            android:layout_marginStart="40sp"
            android:onClick="sendTokenOnclick"/>

        <EditText
            android:id="@+id/sendAmountEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:layout_toEndOf="@id/sendAmountMinusBtn"
            android:layout_centerVertical="true"
            android:background="@null"
            android:hint="@string/SendTokenAmountScript"
            android:textColorHint="@color/walletNineColor"
            android:inputType="number"
            android:textAlignment="center"/>

        <ImageButton
            android:id="@+id/sendAmountPlusBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/sendAmountEt"
            android:layout_centerVertical="true"
            android:background="@null"
            android:padding="3sp"
            app:srcCompat="@drawable/ic_plus_token"
            android:onClick="sendTokenOnclick"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8sp"
        android:layout_marginStart="32sp"
        android:layout_marginTop="5sp"
        android:background="@color/walletEightColor"/>

    <Button
        android:id="@+id/SendTokenDoneBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/BuyTokenDone"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="56sp"
        android:onClick="sendTokenOnclick"/>
</LinearLayout>