<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionDetail"
    android:orientation="vertical"
    android:background="@color/walletSecondColor">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TxDetailTitle"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/walletFirstColor"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

            <ImageButton
                android:id="@+id/closeActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_close_black_24dp"
                android:tint="@color/walletFirstColor"
                android:background="@null"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:onClick="txDetailOnclick"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/txDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20sp"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="10sp"/>

    <ImageView
        android:id="@+id/txImage"
        android:layout_width="72sp"
        android:layout_height="72sp"
        android:layout_marginTop="32sp"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp">

        <TextView
            android:id="@+id/txAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="+ 3.00"
            android:textSize="35dp"/>
        <TextView
            android:id="@+id/txTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/txAmount"
            android:layout_alignBaseline="@id/txAmount"
            android:textColor="@color/walletFifthColor"
            android:textSize="18sp"
            android:layout_marginStart="10sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"
        android:layout_marginStart="30sp">

        <TextView
            android:id="@+id/txBlocknumTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TxBlockNumTitle"
            android:textColor="@color/walletThirdColor"/>

        <TextView
            android:id="@+id/txBlockNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/txBlocknumTitle"
            android:layout_marginStart="18sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginEnd="30sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@color/walletThirdColor"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="16sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp">

        <TextView
            android:id="@+id/txFromTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SendTokenFrom"
            android:textColor="@color/walletThirdColor"/>

        <TextView
            android:id="@+id/txFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/txFromTitle"
            android:layout_marginStart="38sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginEnd="30sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@color/walletThirdColor"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="16sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp">

        <TextView
            android:id="@+id/txToTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SendTokenTo"
            android:textColor="@color/walletThirdColor"/>

        <TextView
            android:id="@+id/txTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/txToTitle"
            android:layout_marginStart="56sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginEnd="30sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@color/walletThirdColor"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="16sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp">

        <TextView
            android:id="@+id/txContractTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TxContractAddressTitle"
            android:textColor="@color/walletThirdColor"/>

        <TextView
            android:id="@+id/txContract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/txContractTitle"
            android:layout_marginStart="18sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginEnd="30sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@color/walletThirdColor"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="16sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp">

        <TextView
            android:id="@+id/txGasTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TxGasTitle"
            android:textColor="@color/walletThirdColor"/>

        <TextView
            android:id="@+id/txGas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/txGasTitle"
            android:layout_marginStart="48sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginEnd="30sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@color/walletThirdColor"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="16sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp">

        <TextView
            android:id="@+id/txGasPriceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TxGasPriceTitle"
            android:textColor="@color/walletThirdColor"/>

        <TextView
            android:id="@+id/txGasPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/txGasPriceTitle"
            android:layout_marginStart="11sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginEnd="30sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@color/walletThirdColor"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="16sp"/>
</LinearLayout>